[package]
name = "socketioxide-postgres"
description = "PostgreSQL adapter for socketioxide"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[features]
sqlx = ["dep:sqlx"]
tokio-postgres = ["dep:tokio-postgres"]
default = ["sqlx"]

[dependencies]
socketioxide-core = { version = "0.18", path = "../socketioxide-core", features = [
    "remote-adapter",
] }
futures-core.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
smallvec = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["time", "rt", "sync"] }
tracing.workspace = true
thiserror.workspace = true

# PostgreSQL implementations
tokio-postgres = { version = "0.7", default-features = false, optional = true, features = [
    "runtime",
] }
sqlx = { version = "0.8", default-features = false, optional = true, features = [
    "postgres",
    "runtime-tokio",
] }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }
socketioxide = { path = "../socketioxide", features = [
    "tracing",
    "__test_harness",
] }
tracing-subscriber.workspace = true
bytes.workspace = true
futures-util.workspace = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
