[package]
name = "socketioxide-redis"
description = "Redis adapter for the socket.io protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
socketioxide-core = { version = "0.15", path = "../socketioxide-core" }
futures-core.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
smallvec = { workspace = true, features = ["serde"] }
tokio.workspace = true
rmp-serde.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Redis implementation
redis = { version = "0.27", features = [
    "aio",
    "tokio-comp",
], default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }
socketioxide = { path = "../socketioxide", features = [
    "__test_harness",
    "tracing",
] }
tracing-subscriber.workspace = true

[features]
__test_harness = ["socketioxide-core/__test_harness"]
