[package]
name = "engineioxide-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish = false

[dependencies]
engineioxide = { path = "../../engineioxide", default-features = false, features = [
    "tracing",
    "hyper-v1",
] }
hyper-v1 = { package = "hyper", version = "1.0.0-rc.4", features = [
    "server",
    "http1",
] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
hyper = { version = "0.14.26", features = ["server", "http1", "tcp"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
serde_json.workspace = true

[[bin]]
name = "engineioxide-hyper-v1-e2e"
path = "engineioxide-hyper-v1.rs"

[[bin]]
name = "engineioxide-hyper-v04-e2e"
path = "engineioxide-hyper-v04.rs"

[features]
v3 = ["engineioxide/v3"]
v4 = ["engineioxide/v4"]
