[package]
name = "engineioxide-e2e"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish = false

[dependencies]
bytes.workspace = true
engineioxide = { path = "../../crates/engineioxide", default-features = false, features = [
    "tracing",
] }
engineioxide-client = { path = "../../crates/engineioxide-client" }
hyper-util = { workspace = true, features = ["tokio"] }
futures-util.workspace = true
hyper = { workspace = true, features = ["server", "http1"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
serde_json.workspace = true

[[bin]]
name = "engineioxide-e2e"
path = "engineioxide.rs"

[[bin]]
name = "engineioxide-e2e-client"
path = "client.rs"

[features]
v3 = ["engineioxide/v3"]
v4 = []
