[package]
name = "heaptrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { path = "../../socketioxide" }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
rust_socketio = { version = "0.4.2", features = ["async"] }
serde_json = "1.0.68"
rand = "0.8.4"

[[bin]]
name = "heaptrack-client"
path = "src/client.rs"
