[package]
name = "heaptrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { path = "../../crates/socketioxide", features = ["tracing"] }
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber.workspace = true
serde_json.workspace = true
rand = "0.9.1"
