[package]
name = "redis-adapter-e2e"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish = false

[features]
redis = ["socketioxide-redis/redis"]
fred = ["socketioxide-redis/fred"]
v4 = ["socketioxide/v4"]
v5 = []
default = ["v5"]

[dependencies]
socketioxide = { path = "../../crates/socketioxide", default-features = false, features = [
    "tracing",
] }
socketioxide-redis = { path = "../../crates/socketioxide-redis", default-features = false }
hyper-util = { workspace = true, features = ["tokio"] }
hyper = { workspace = true, features = ["server", "http1"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
serde_json.workspace = true
redis = { version = "0.27.5", features = [
    "aio",
    "tokio-comp",
], default-features = false }
fred = { version = "10", features = [
    "subscriber-client",
    "tracing",
], default-features = false }

[[bin]]
name = "redis-adapter-e2e"
path = "main.rs"
