[package]
name = "socketioxide-e2e"
version = "0.6.0"
edition = "2021"

[dependencies]
socketioxide = { path = "../../socketioxide", default-features = false, features = [
    "tracing",
] }
hyper = { version = "0.14.26" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
serde_json.workspace = true

[[bin]]
name = "socketioxide-e2e"
path = "socketioxide.rs"


[features]
v4 = ["socketioxide/v4"]
v5 = ["socketioxide/v5"]
