[package]
name = "angular-todomvc"
version.workspace = true
edition.workspace = true


[dependencies]
socketioxide = { path = "../../socketioxide", features = ["state"] }
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
