[package]
name = "axum-echo-tls"
version.workspace = true
edition.workspace = true

[dependencies]
socketioxide = { path = "../../socketioxide" }
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
serde_json.workspace = true
axum-server = { version = "0.6", features = ["tls-rustls"] }

[[bin]]
name = "axum-echo-tls"
path = "axum_echo-tls.rs"
