[package]
name = "axum-echo"
version.workspace = true
edition.workspace = true

[dependencies]
socketioxide = { path = "../../socketioxide" , features = ["tracing"] }
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
serde_json.workspace = true

[[bin]]
name = "axum-echo"
path = "axum_echo.rs"
