[package]
name = "axum-echo"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true
rmpv.workspace = true

[[bin]]
name = "axum-echo"
path = "axum_echo.rs"
